redezine + photo place ment on small screen fixed

--- a/style.css
+++ b/style.css
@@ -16,17 +16,17 @@ canvas {
     width:60%;
   }
   .box{
-    background-color: rgba(111, 190, 255, 0.5);
+    background-color: rgb(255, 123, 123, 0.25);
     border-radius:3px;
     padding: 15px;
-    border: 10px solid rgba(76, 153, 216, 0.5);
+    border: 10px solid rgb(122, 129, 255, 0.50);
     font-family:'Papyrus'
   }
   .boxy{
-    background-color: rgba(4, 100, 255, 0.5);
+    background-color: rgb(240, 248, 129, 0.25);
     border-radius:3px;
     padding: 15px;
-    border: 10px solid rgba(0, 69, 179, 0.5);
+    border: 10px solid rgba(153, 240, 121, 0.5);
     font-family:'Papyrus'
   }
 
